--- a/flask-service.yaml
+++ b/flask-service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: flask-app-service
+  annotations:
+    prometheus.io/scrape: 'true'
 spec:
   selector:
     app: flask-app
